Remove unnecessary changes